--- a/src/styles.css
+++ b/src/styles.css
@@ -51,7 +51,7 @@ body {
   min-height: 100vh;
   position: relative;
   margin: 0;
-  padding-bottom: 50vh;
+  padding-bottom: 25vh;
   box-sizing: border-box;
 }
 
